# translation-agency

./: .gitignore  Cargo.toml  README.md
db/: create.sql
migrations/: 20240217152753_init.down.sql  20240217152753_init.up.sql
src/: enums.rs  main.rs  models.rs  state.rs
src/auth/: claims.rs  jwt.rs  mod.rs  token.rs
src/email/: mod.rs  verify.rs
src/models/: api_response.rs  create_user.rs  mod.rs
src/models/db/: mod.rs  user.rs
src/routes/v1/: create_usr.rs  mod.rs
src/routes/v1/auth/: create_usr.rs  mod.rs  verify_usr.rs
src/routes/v1/user/: creation.rs  mod.rs  verification.rs
templates/: verify.html
