[package]
name = "translation-api"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
